@@ -19,6 +19,7 @@ public class FoodService {
 
     private final FoodRepository foodRepository;
 
+    // 음식 등록은 로그인 사용자만 가능
     public Food registerFood(FoodRequestDto dto, User user) {
         if (foodRepository.existsByName(dto.getName())) {
             throw new FoodException(FoodErrorCode.DUPLICATE_FOOD);
@@ -36,27 +37,25 @@ public class FoodService {
                 .user(user)
                 .build();
 
-        Food saved = foodRepository.save(food);
-        return saved;
+        return foodRepository.save(food);
     }
 
-    public List<FoodResponseDto> getAllFoods(User user) {
-        return foodRepository.findByUser(user).stream()
+    // ✅ 모든 사용자가 조회할 수 있는 전체 음식 목록
+    public List<FoodResponseDto> getAllFoods() {
+        return foodRepository.findAll().stream()
                 .map(FoodResponseDto::fromEntity)
                 .collect(Collectors.toList());
     }
 
-    public FoodResponseDto getFoodById(Long id, User user) {
+    // ✅ 특정 ID로 음식 조회 (누구나 가능)
+    public FoodResponseDto getFoodById(Long id) {
         Food food = foodRepository.findById(id)
                 .orElseThrow(() -> new FoodException(FoodErrorCode.FOOD_NOT_FOUND));
-
-        if (!food.getUser().getId().equals(user.getId())) {
-            throw new FoodException(FoodErrorCode.UNAUTHORIZED_ACCESS);
-        }
 
         return FoodResponseDto.fromEntity(food);
     }
 
+    // 음식 삭제는 로그인 사용자만 가능
     public void deleteFood(Long id, User user) {
         Food food = foodRepository.findById(id)
                 .orElseThrow(() -> new FoodException(FoodErrorCode.FOOD_NOT_FOUND));
@@ -68,12 +67,25 @@ public class FoodService {
         foodRepository.delete(food);
     }
 
-    public List<FoodResponseDto> searchFoods(String keyword, User user) {
-        List<Food> foods = foodRepository.findByNameContaining(keyword);
-        return foods.stream()
-                .filter(f -> f.getUser().getId().equals(user.getId()))
+    // ✅ 공용 키워드 검색
+    public List<FoodResponseDto> searchFoods(String keyword) {
+        return foodRepository.findByNameContainingIgnoreCase(keyword).stream()
                 .map(FoodResponseDto::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    // ✅ 공용 조건 검색 (키워드 없으면 전체 반환)
+    public List<FoodResponseDto> getFoods(String keyword) {
+        List<Food> foods;
+
+        if (keyword == null || keyword.isBlank()) {
+            foods = foodRepository.findAll();
+        } else {
+            foods = foodRepository.findByNameContainingIgnoreCase(keyword);
+        }
+
+        return foods.stream()
+                .map(FoodResponseDto::fromEntity)
+                .collect(Collectors.toList());
+    }
 }
